--- a/style.css
+++ b/style.css
@@ -620,6 +620,14 @@ video {
   top: 5rem;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
+.top-16 {
+  top: 4rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -804,6 +812,10 @@ video {
 
 .w-40 {
   width: 10rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .max-w-40 {
@@ -1022,6 +1034,10 @@ video {
 .bg-zinc-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(9 9 11 / var(--tw-bg-opacity, 1));
+}
+
+.bg-black\/30 {
+  background-color: rgb(0 0 0 / 0.3);
 }
 
 .bg-opacity-75 {
