--- a/style.css
+++ b/style.css
@@ -923,6 +923,11 @@ video {
   border-top-width: 1px;
 }
 
+.border-\[\#c99976\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(201 153 118 / var(--tw-border-opacity, 1));
+}
+
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
@@ -943,9 +948,9 @@ video {
   border-color: rgb(250 204 21 / var(--tw-border-opacity, 1));
 }
 
-.border-yellow-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
+.bg-\[\#c99976\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(201 153 118 / var(--tw-bg-opacity, 1));
 }
 
 .bg-black\/20 {
@@ -970,11 +975,6 @@ video {
 
 .bg-black\/90 {
   background-color: rgb(0 0 0 / 0.9);
-}
-
-.bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
 .bg-zinc-800 {
@@ -1158,6 +1158,11 @@ video {
   letter-spacing: 0.05em;
 }
 
+.text-\[\#c99976\] {
+  --tw-text-opacity: 1;
+  color: rgb(201 153 118 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
@@ -1168,6 +1173,11 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity, 1));
+}
+
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
@@ -1176,16 +1186,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity, 1));
-}
-
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
 .opacity-0 {
@@ -1266,24 +1266,29 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-\[\#6d4c35\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 76 53 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-\[\#c99976\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(201 153 118 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-yellow-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(202 138 4 / var(--tw-bg-opacity, 1));
+.hover\:text-\[\#6d4c35\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(109 76 53 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-yellow-400:hover {
+.hover\:text-\[\#c99976\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-yellow-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+  color: rgb(201 153 118 / var(--tw-text-opacity, 1));
 }
 
 .hover\:shadow-xl:hover {
